--- a/PrepenAPI.csproj
+++ b/PrepenAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>cd2aff39-eba9-4db5-b43e-a8e733704ce8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
