Refactor appsettings to include ConnectionStrings and JwtSettings sections

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=prepen.db"
+  },
+  "JwtSettings": {
+    "Issuer": "PrepenAPI",
+    "Audience": "PrepenAPI",
+    "ExpiryInHours": 24
   }
 }
